fix: double scrollbars (#24)

--- a/src/popup/Tokens/index.css
+++ b/src/popup/Tokens/index.css
@@ -579,3 +579,11 @@ select .dark-select {
 .danger-item {
     color: #e73644 !important;
 }
+
+.hide-scrollbar {
+    overflow: auto;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
